[gd_scene load_steps=3 format=3 uid="uid://japyvpunvb26"]

[ext_resource type="Script" uid="uid://fugettr3tcxt" path="res://main.gd" id="1_glv2v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glv2v"]
bg_color = Color(0.129412, 0.713726, 0.243137, 1)

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_glv2v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 25.0
offset_right = 0.5
offset_bottom = 48.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="MessageLog" type="RichTextLabel" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
scroll_following = true

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 10)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
scale = Vector2(1, 0.4)
theme_override_styles/fill = SubResource("StyleBoxFlat_glv2v")
show_percentage = false
